# python-project-template

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
